[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/creatures/Ant.gd" type="Script" id=1]
[ext_resource path="res://src/collisions/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/collisions/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/collisions/StopBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/ant-gray.png" type="Texture" id=5]
[ext_resource path="res://src/collisions/Targeting.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/HurtBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2, 0 ), Vector2( 2, -2 ), Vector2( 2, -2 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 15.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Standby"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/HurtBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Move"

[sub_resource type="AnimationNodeTimeScale" id=6]

[sub_resource type="AnimationNodeBlendTree" id=7]
graph_offset = Vector2( 0, 49.56 )
nodes/Animation/node = SubResource( 5 )
nodes/Animation/position = Vector2( 100, 120 )
nodes/TimeScale/node = SubResource( 6 )
nodes/TimeScale/position = Vector2( 260, 100 )
nodes/output/position = Vector2( 460, 130 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Standby"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Attack/node = SubResource( 4 )
states/Attack/position = Vector2( 303, 168 )
states/Move/node = SubResource( 7 )
states/Move/position = Vector2( 499.5, 100.5 )
states/Standby/node = SubResource( 8 )
states/Standby/position = Vector2( 303, 97 )
transitions = [ "Standby", "Attack", SubResource( 9 ), "Attack", "Standby", SubResource( 10 ), "Standby", "Move", SubResource( 11 ), "Move", "Standby", SubResource( 12 ) ]
start_node = "Standby"

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 7, 10 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 8, 7 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 7, 7 )

[sub_resource type="CapsuleShape2D" id=18]
radius = 6.0
height = 3.99999

[node name="Ant" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
max_speed = 40.0
rampup_time = 0.5
stop_time = 0.2
attack_damage = 5.0
attack_force = 0.0
path_to_projectile_form = "res://src/catapult/projectiles/AntProjectile.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 1 )
anims/Move = SubResource( 2 )
anims/Standby = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 14 )
parameters/Move/TimeScale/scale = 1.0

[node name="Pivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pivot"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
offset = Vector2( 0, -5 )

[node name="HitBox" parent="Pivot" instance=ExtResource( 2 )]
visible = true
position = Vector2( 0, -7 )
rotation = -1.5708
collision_layer = 8

[node name="CollisionShape2D" parent="Pivot/HitBox" index="0"]
shape = SubResource( 15 )

[node name="HurtBox" parent="Pivot" instance=ExtResource( 3 )]
collision_mask = 16

[node name="CollisionShape2D" parent="Pivot/HurtBox" index="0"]
position = Vector2( 6, -7 )
shape = SubResource( 16 )
disabled = true

[node name="StopBox" parent="Pivot" instance=ExtResource( 4 )]
collision_mask = 16

[node name="CollisionShape2D" parent="Pivot/StopBox" index="0"]
position = Vector2( 5, -7 )
shape = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
rotation = -1.5708
shape = SubResource( 18 )

[node name="Targeting" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 16

[connection signal="damage" from="Pivot/HitBox" to="." method="_on_HitBox_damage"]
[connection signal="hurt" from="Pivot/HurtBox" to="." method="_on_HurtBox_hurt"]
[connection signal="area_entered" from="Pivot/StopBox" to="." method="_on_StopBox_area_entered"]
[connection signal="area_exited" from="Pivot/StopBox" to="." method="_on_StopBox_area_exited"]

[editable path="Pivot/HitBox"]
[editable path="Pivot/HurtBox"]
[editable path="Pivot/StopBox"]
